# applicant-tracking-system-mcp

./: .gitignore  README.md  applicants.csv  mcp-server-example.py  pyproject.toml  requirements.txt
.cursor/: mcp.json
email-templates/: candidate-draft.md  candidate-draft.txt
jobs/: ai-engineer.md  data-engineer.md  frontend-engineer.md  product-manager.md  senior-software-engineer.md
linkedin/: alex-rivera-ae.md  alex-smith-sse.md  amanda-foster-sse.md  carlos-mendez-de.md  chen-wei-ae.md  daniel-brooks-pm.md  david-kim-sse.md  derek-foster-ae.md  emma-liu-fe.md  fatima-khan-ae.md  james-wilson-pm.md  jane-doe-sse.md  jennifer-walsh-de.md  jordan-blake-fe.md  kevin-nguyen-sse.md  lauren-hayes-sse.md  lena-kowalski-ae.md  lisa-park-de.md  marcus-johnson-de.md  marcus-webb-fe.md  maria-garcia-sse.md  maya-johnson-ae.md  nick-thompson-sse.md  nina-patel-fe.md  olivia-davis-de.md  omar-hassan-pm.md  priya-nair-de.md  priya-sharma-pm.md  rachel-green-sse.md  raj-verma-ae.md  ryan-obrien-de.md  sam-chen-sse.md  samira-patel-ae.md  sarah-mitchell-pm.md  sofia-rodriguez-fe.md  tyler-brooks-sse.md  victor-okonkwo-ae.md  yuki-tanaka-ae.md  zoe-taylor-fe.md
prompts/: ava.md
resumes/: ahmed-hassan-fe.txt  alex-rivera-ae.txt  alex-smith-sse.txt  amanda-foster-sse.txt  carlos-mendez-de.txt  chen-wei-ae.txt  chris-lee-pm.txt  daniel-brooks-pm.txt  david-kim-sse.txt  derek-foster-ae.txt  emily-brown-pm.txt  emma-liu-fe.txt  fatima-ahmed-pm.txt  fatima-khan-ae.txt  jake-miller-fe.txt  james-wilson-pm.txt  jane-doe-sse.txt  jennifer-walsh-de.txt  jordan-blake-fe.txt  (+26 more)
(+6 files in other folders)
